# myairflow

./: README.md  l.py  movie_after  pyproject.toml
dags/: .seoul.py.swp  after_movie.py  catchup.py  first_spark_submit.py  hello.py  movie.py  movie_after.py  movie_spark.py  noti.py  seoul.py  vhzkclq.py  virtual.py  vo.py
note/: temp.py
pyspark/: movie_meta.py
src/myairflow/: .send_notify.py.swp  send_notify.py
tests/: .test_notify.py.swp  test_notify.py
